# fq-rs

./: .env  .gitignore  Cargo.toml
assets/: fretboard.js  game.js  main.js  staff.js  styles.css  token.js
migrations/: 20231029224007_create_users_table.sql  20231029224631_create_games_table.sql
src/: app_state.rs  auth.rs  game.rs  lib.rs  main.rs  routes.rs  theory.rs  user.rs  ws.rs
src/game/: db.rs  guess.rs  mod.rs  round.rs
src/user/: db.rs  mod.rs
templates/: base.html  game.html  index.html  user.html
