[package]
name = "fq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
axum = "0.6.20"
serde = "1.0.189"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.3.0"
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["fs"] }
tower-cookies = "0.9.0"
rand = "0.8.5"
