[package]
name = "fq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.3.0"
axum = { version = "0.6.20", features = ["ws", "headers", "json", "form"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"]}
headers = "0.3"
hyper = { version = "0.14.27", features = ["full"] }
once_cell = "1.18"
rand = "0.8.5"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite", "json", "migrate" ] }
time = "0.3.30"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-cookies = "0.9.0"
tower-http = { version = "0.4.4", features = ["fs", "trace"] }
tower-sessions = { version = "0.3.3", features = ["sqlite-store"] }
jsonwebtoken = "9.1.0"
